# rugui2

./: Cargo.toml  readme.md
examples/: grid.rs  hello.rs  select.rs  text.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/editor/: Cargo.toml
examples/editor/src/: gui.rs  main.rs
examples/game/: Cargo.toml  readme.md
examples/game/canvas/: Cargo.toml
examples/game/canvas/src/: lib.rs  rgba.wgsl
examples/game/src/: drawing.rs  engine.rs  game.rs  gui.rs  main.rs
examples/game/timer/: Cargo.toml
examples/game/timer/src/: lib.rs
examples/game/winit_controls/: Cargo.toml
examples/game/winit_controls/src/: lib.rs
rugui2_wgpu/: Cargo.toml
rugui2_wgpu/src/: lib.rs  texture.rs
rugui2_wgpu/src/shaders/: base.wgsl  glyph.wgsl  quad.wgsl
rugui2_winit/: Cargo.toml
rugui2_winit/src/: lib.rs
src/: colors.rs  drawing.rs  element.rs  events.rs  lib.rs  math.rs  rich_text.rs  styles.rs  text.rs  variables.rs  widgets.rs
