[package]
name = "rugui2"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/antosatko/rugui"
readme = "readme.md"
keywords = ["gamedev", "graphics", "gui", "retained_gui", "wgpu"]
categories = ["rendering", "gui", "game-development", "rendering::engine"]
license = "MIT"


[dependencies]

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
winit = "0.30.5"
image = "0.25.5"
common = { path = "examples/common" }

[features]
default = []

[profile.release]
debug = true


[workspace]
members = ["examples/common", "rugui2_wgpu", "rugui2_winit"]
