[package]
name = "rugui2_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = {version = "23.0.1"}
image = { version = "0.25.5", optional = true }
bytemuck = { version = "1.20.0", features = ["derive"] }

rugui2 = {path = "../", features = ["bytemuck"] }

[features]
default = ["image"]
image = ["dep:image"]
