[package]
name = "game"
version = "0.1.0"
edition = "2021"


[dependencies]
wgpu = "24.0.0"
winit = "0.30.5"
tokio = { version = "1.42.0", features = ["full"] }
rugui2 = { path = "../../" }
rugui2_wgpu = { path = "../../rugui2_wgpu" }
rugui2_winit = { path = "../../rugui2_winit", features = ["clipboard"] }


timer = { path = "timer", features = ["spin_sleep"]}
winit_controls = { path = "winit_controls"}
canvas = { path = "canvas", features = ["wgpu"]}
image = "0.25.5"
